<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_ModbusRtuMaster_State" Id="{a3982e20-e558-4fa1-84a3-10684a4b9727}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_ModbusRtuMaster_State :
(
	eReset,
	eIdle,
	eReadPre,
	eReadPost,
	eError
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>