<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Modbus_Parameter" Id="{5a5f415a-8bf7-4ead-9ab5-07336f0a8b79}">
    <Declaration><![CDATA[TYPE ST_Modbus_Parameter :
STRUCT
	nMemAddr			:WORD;
	nQuantity			:WORD;
	fConvFactor			:REAL;
	aDataStorage		:ARRAY[1..4] OF BYTE;
	aDataValue			:REAL;
	eDataType			:E_Modbus_DataType;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>